<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banknote_phone"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:gravity="center"
        android:text="@string/dollar_cod"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="@+id/imageViewCurrentCurrency"
        app:layout_constraintStart_toStartOf="@+id/imageViewCurrentCurrency"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCurrentCurrency">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcVBanksPurchase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="21dp"
                android:background="@drawable/border" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcVBanksSale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="21dp"
                android:background="@drawable/border"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:text="@string/buy_from_you" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:gravity="center"
                android:text="@string/sell_you" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewCurrentCurrency"
        android:layout_width="@dimen/main_banknote_width"
        android:layout_height="@dimen/main_banknote_height"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:strokeColor="#000000"
        app:strokeWidth="7dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/dollar_desc"
        app:srcCompat="@drawable/dollar" />

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="@dimen/banknote_width"
            android:layout_height="@dimen/banknote_height"
            android:contentDescription="@string/euro_desc"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:onClick="onClickBOne"
            app:srcCompat="@drawable/euro" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="@dimen/banknote_width"
            android:layout_height="@dimen/banknote_height"
            android:layout_weight="1"
            android:contentDescription="@string/rubol_desc"
            android:onClick="onClickBTwo"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/rubol" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="@dimen/banknote_width"
            android:layout_height="@dimen/banknote_height"
            android:layout_weight="1"
            android:contentDescription="@string/lair_desc"
            android:onClick="onClickBThree"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/lari" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>